azure/ServiceManagement/Azure.Service/v1.6.1/Azure.Service.md
---
Module Name: Azure.Service
Module Guid: D48CF693-4125-4D2D-8790-1514F44CE325
Download Help Link: none
Help Version: 2.0.0.1
Locale: en-US
updated_at: 10/18/2016 9:38 PM
ms.date: 10/18/2016
content_git_url: https://github.com/Azure/azure-docs-powershell/blob/master/azureps-cmdlets-docs/ServiceManagement/Azure.Service/v1.6.1/Azure.Service.md
gitcommit: https://github.com/Azure/azure-docs-powershell/blob/23cdb8705d4ab9807c0e21b238f3b134a7d49c7d/azureps-cmdlets-docs/ServiceManagement/Azure.Service/v1.6.1/Azure.Service.md
ms.topic: conceptual
ms.prod: powershell
ms.service: Azure PowerShell
ms.technology: Azure PowerShell
author: visual-studio-china
keywords: powershell, cmdlet
manager: visual-studio-china
---

# Azure.Service Module
## Description
This topic displays help topics for the Azure Service Management Cmdlets.

## Azure.Service Cmdlets
### [Add-AzureCertificate](.\Add-AzureCertificate.md)
Uploads a certificate to an azure_2 cloud service.


### [Add-AzureDataDisk](.\Add-AzureDataDisk.md)
Adds a data disk to a virtual machine.


### [Add-AzureDisk](.\Add-AzureDisk.md)
Adds a disk to the azure_2 disk repository.


### [Add-AzureDns](.\Add-AzureDns.md)
Adds a DNS server to an azure_2 service.


### [Add-AzureEndpoint](.\Add-AzureEndpoint.md)
Adds an endpoint to a virtual machine.


### [Add-AzureInternalLoadBalancer](.\Add-AzureInternalLoadBalancer.md)
Adds an internal load balancer to an azure_2 service.


### [Add-AzureNetworkInterfaceConfig](.\Add-AzureNetworkInterfaceConfig.md)



### [Add-AzureProvisioningConfig](.\Add-AzureProvisioningConfig.md)
Adds provisioning configuration for an azure_2 virtual machine.


### [Add-AzureVhd](.\Add-AzureVhd.md)
Uploads a VHD file from an on-premise computer to a blob in a cloud storage account in azure_2.


### [Add-AzureVirtualIP](.\Add-AzureVirtualIP.md)
Adds a virtual IP to a cloud service.


### [Add-AzureVMImage](.\Add-AzureVMImage.md)
Adds a new operating system image or a new virtual machine image to the image repository.


### [Export-AzureVM](.\Export-AzureVM.md)
Exports an azure_2 virtual machine state to a file.


### [Get-AzureAclConfig](.\Get-AzureAclConfig.md)
Gets the ACL configuration object from an azure_2 virtual machine.


### [Get-AzureAffinityGroup](.\Get-AzureAffinityGroup.md)
Gets an azure_2 affinity group object.


### [Get-AzureCertificate](.\Get-AzureCertificate.md)
Gets a certificate object from an azure_2 service.


### [Get-AzureDataDisk](.\Get-AzureDataDisk.md)
Gets azure_2 data disks.


### [Get-AzureDeploymentEvent](.\Get-AzureDeploymentEvent.md)
Gets information about events that azure_2 initiates that impact virtual machines and cloud services.


### [Get-AzureDeployment](.\Get-AzureDeployment.md)
Gets details of a deployment.


### [Get-AzureDisk](.\Get-AzureDisk.md)
Gets information about disks in the azure_2 disk repository.


### [Get-AzureDns](.\Get-AzureDns.md)
Gets the DNS settings for an azure_2 deployment.


### [Get-AzureEndpoint](.\Get-AzureEndpoint.md)
Gets information about the endpoints that are assigned to an azure_2 virtual machine.


### [Get-AzureInternalLoadBalancer](.\Get-AzureInternalLoadBalancer.md)
Gets the details of the internal load balancer configuration.


### [Get-AzureLocation](..\..\..\Azure.Compute\v1.0\CmdletMDs\Get-AzureLocation.md)
Gets the available data center locations for the current azure_2 subscription.


### [Get-AzureNetworkInterfaceConfig](.\Get-AzureNetworkInterfaceConfig.md)



### [Get-AzureOSDisk](.\Get-AzureOSDisk.md)
Gets the operating system disk of an azure_2 virtual machine.


### [Get-AzureOSVersion](.\Get-AzureOSVersion.md)
Lists all azure_2 guest operating systems.


### [Get-AzurePublicIP](.\Get-AzurePublicIP.md)
Gets the Public IP information for an azure_2 virtual machine.


### [Get-AzureRemoteDesktopFile](.\Get-AzureRemoteDesktopFile.md)
Gets an RDP file for an azure_2 virtual machine.


### [Get-AzureReservedIP](.\Get-AzureReservedIP.md)
Gets a reserved IP address by its name or lists all the reserved IP addresses in the subscription.


### [Get-AzureRoleSize](.\Get-AzureRoleSize.md)
Gets the role size information for the current subscription.


### [Get-AzureRole](.\Get-AzureRole.md)
Returns a list of roles in your Microsoft azure_2 service.


### [Get-AzureServiceADDomainExtension](.\Get-AzureServiceADDomainExtension.md)
Gets the cloud service Active Directory (AD) domain extension that applies to all roles or to named roles at a specified deployment slot.


### [Get-AzureServiceAntimalwareConfig](..\..\..\Azure.Antimalware\v1.0\CmdletMDs\Get-AzureServiceAntimalwareConfig.md)
Gets configuration details for the Microsoft Antimalware service extension.


### [Get-AzureServiceAvailableExtension](.\Get-AzureServiceAvailableExtension.md)
Gets information about the available extensions for hosted services.


### [Get-AzureServiceDiagnosticsExtension](.\Get-AzureServiceDiagnosticsExtension.md)
Gets the cloud service diagnostics extension applied on all roles or named roles at a certain deployment slot.


### [Get-AzureServiceExtension](.\Get-AzureServiceExtension.md)
Gets cloud service extensions that are applied on a deployment.


### [Get-AzureServiceRemoteDesktopExtension](.\Get-AzureServiceRemoteDesktopExtension.md)
This cmdlet gets the cloud service remote desktop extension applied on all roles or named roles at a certain deployment slot.


### [Get-AzureService](.\Get-AzureService.md)
Returns an object with information about the cloud services for the current subscription.


### [Get-AzureStaticVNetIP](.\Get-AzureStaticVNetIP.md)
Gets the static VNet IP address information from a virtual machine object, if any.


### [Get-AzureStorageAccount](.\Get-AzureStorageAccount.md)
Gets the storage accounts for the current azure_2 subscription.


### [Get-AzureStorageKey](.\Get-AzureStorageKey.md)
Returns the primary and secondary storage account keys for an azure_2 storage account.


### [Get-AzureSubnet](.\Get-AzureSubnet.md)
Gets a list of subnets associated with the specified azure_2 virtual machine.


### [Get-AzureVMAccessExtension](.\Get-AzureVMAccessExtension.md)
Gets the VMAccess extension applied on a virtual machine.


### [Get-AzureVMAvailableExtension](.\Get-AzureVMAvailableExtension.md)
Gets information for the latest available extensions for virtual machines.


### [Get-AzureVMBGInfoExtension](.\Get-AzureVMBGInfoExtension.md)
Gets the BGInfo extension applied on a virtual machine.


### [Get-AzureVMChefExtension](.\Get-AzureVMChefExtension.md)
Gets the Chef extension applied on a virtual machine.


### [Get-AzureVMCustomScriptExtension](.\Get-AzureVMCustomScriptExtension.md)
Gets information from an azure_2 virtual machine custom script extension.


### [Get-AzureVMDiagnosticsExtension](.\Get-AzureVMDiagnosticsExtension.md)
Gets the settings of the azure_2 Diagnostics extension on a virtual machine.


### [Get-AzureVMDscExtensionStatus](.\Get-AzureVMDscExtensionStatus.md)
Gets the DSC extension status for all the virtual machines deployed in a cloud service or for a particular virtual machine in the service.


### [Get-AzureVMDscExtension](.\Get-AzureVMDscExtension.md)
Gets the settings of the DSC extension on a virtual machine.


### [Get-AzureVMExtension](.\Get-AzureVMExtension.md)
Gets resource extensions applied to virtual machines.


### [Get-AzureVMImageDiskConfigSet](.\Get-AzureVMImageDiskConfigSet.md)
Gets a disk configuration set object from the input image context.


### [Get-AzureVMImage](.\Get-AzureVMImage.md)
Gets the properties on one or a list of operating systems or a virtual machine image in the image repository.


### [Get-AzureVMMicrosoftAntimalwareExtension](..\..\..\Azure.Antimalware\v1.0\CmdletMDs\Get-AzureVMMicrosoftAntimalwareExtension.md)
Gets the Microsoft Antimalware extension details for a virtual machine.


### [Get-AzureVMPuppetExtension](.\Get-AzureVMPuppetExtension.md)
Gets the Puppet extension applied on a virtual machine.


### [Get-AzureVMSqlServerExtension](.\Get-AzureVMSqlServerExtension.md)
Gets the settings of the SQL Server IaaS Agent on a particular virtual machine.


### [Get-AzureVM](.\Get-AzureVM.md)
Retrieves information from one or more azure_2 virtual machines.


### [Get-AzureVNetConfig](.\Get-AzureVNetConfig.md)
Gets the azure_2 virtual network configuration from the current subscription.


### [Get-AzureVNetSite](.\Get-AzureVNetSite.md)
Gets a list object with information about azure_2 virtual networks.


### [Get-AzureWinRMUri](.\Get-AzureWinRMUri.md)
Gets the URI to WinRM https listener to a virtual machine or a list of virtual machines in a hosted service.


### [Import-AzureVM](.\Import-AzureVM.md)
Imports an azure_2 virtual machine state from a file.


### [Move-AzureDeployment](.\Move-AzureDeployment.md)
Swaps deployments between production and staging.


### [New-AzureAclConfig](.\New-AzureAclConfig.md)
Creates an empty ACL configuration object.


### [New-AzureAffinityGroup](.\New-AzureAffinityGroup.md)
Creates an affinity group in the current subscription.


### [New-AzureCertificateSetting](.\New-AzureCertificateSetting.md)
Creates a certificate setting object for a certificate is in a service.


### [New-AzureDeployment](.\New-AzureDeployment.md)
Creates a deployment from a service.


### [New-AzureDns](.\New-AzureDns.md)
Creates an azure_2 DNS settings object.


### [New-AzureInternalLoadBalancerConfig](.\New-AzureInternalLoadBalancerConfig.md)
Creates an internal load balancer configuration.


### [New-AzureQuickVM](.\New-AzureQuickVM.md)
Configures and creates an azure_2 virtual machine.


### [New-AzureReservedIP](.\New-AzureReservedIP.md)
Creates a reserved IP address.


### [New-AzureServiceADDomainExtensionConfig](.\New-AzureServiceADDomainExtensionConfig.md)
Generates the configuration for the AD domain extension for cloud services.


### [New-AzureServiceDiagnosticsExtensionConfig](.\New-AzureServiceDiagnosticsExtensionConfig.md)
Generates a configuration for a diagnostics extension for specified role(s) or all roles.


### [New-AzureServiceExtensionConfig](.\New-AzureServiceExtensionConfig.md)
Creates a cloud service extension configuration for a deployment.


### [New-AzureServiceRemoteDesktopExtensionConfig](.\New-AzureServiceRemoteDesktopExtensionConfig.md)
Generates a remote desktop extension configuration for a deployment.


### [New-AzureService](.\New-AzureService.md)
Creates an azure_2 service.


### [New-AzureSSHKey](.\New-AzureSSHKey.md)
Creates a SSH Key object to insert an existing certificate into a new Linux-based azure_2 virtual machines.


### [New-AzureStorageAccount](.\New-AzureStorageAccount.md)
Creates a new storage account in an azure_2 subscription.


### [New-AzureStorageKey](.\New-AzureStorageKey.md)
Regenerates storage keys for an azure_2 storage account.


### [New-AzureVMConfig](.\New-AzureVMConfig.md)
Creates an azure_2 virtual machine configuration object.


### [New-AzureVMImageDiskConfigSet](.\New-AzureVMImageDiskConfigSet.md)
Creates a disk configuration set object.


### [New-AzureVMSqlServerAutoBackupConfig](..\..\..\..\ResourceManager\AzureRM.Compute\v1.0\CmdletMDs\New-AzureVMSqlServerAutoBackupConfig.md)
Creates a configuration object for SQL Server automatic backup.


### [New-AzureVMSqlServerAutoPatchingConfig](..\..\..\..\ResourceManager\AzureRM.Compute\v1.0\CmdletMDs\New-AzureVMSqlServerAutoPatchingConfig.md)
Creates a configuration object for virtual machine automatic patching.


### [New-AzureVM](.\New-AzureVM.md)
Creates an azure_2 virtual machine.


### [Publish-AzureVMDscConfiguration](.\Publish-AzureVMDscConfiguration.md)
Publishes a desired state configuration script to azure_2 blob storage.


### [Remove-AzureAclConfig](.\Remove-AzureAclConfig.md)
Removes an ACL configuration object from an azure_2 virtual machine configuration.


### [Remove-AzureAffinityGroup](.\Remove-AzureAffinityGroup.md)
Deletes an affinity group in a subscription.


### [Remove-AzureAvailabilitySet](.\Remove-AzureAvailabilitySet.md)
Removes an availability set from an azure_2 virtual machine.


### [Remove-AzureCertificate](.\Remove-AzureCertificate.md)
Removes a certificate from an azure_2 service.


### [Remove-AzureDataDisk](.\Remove-AzureDataDisk.md)
Removes a data disk from an azure_2 virtual machine.


### [Remove-AzureDeployment](.\Remove-AzureDeployment.md)
Deletes a deployment of a cloud service.


### [Remove-AzureDisk](.\Remove-AzureDisk.md)
Removes a disk from the azure_2 disk repository.


### [Remove-AzureDns](.\Remove-AzureDns.md)
Removes a DNS server from an azure_2 service.


### [Remove-AzureEndpoint](.\Remove-AzureEndpoint.md)
Deletes an endpoint from an azure_2 virtual machine.


### [Remove-AzureInternalLoadBalancer](.\Remove-AzureInternalLoadBalancer.md)
Removes an internal load balancer configuration.


### [Remove-AzureNetworkInterfaceConfig](.\Remove-AzureNetworkInterfaceConfig.md)



### [Remove-AzureNetworkSecurityGroupConfig](.\Remove-AzureNetworkSecurityGroupConfig.md)



### [Remove-AzurePublicIP](.\Remove-AzurePublicIP.md)
Removes Public IP configuration from an azure_2 virtual machine.


### [Remove-AzureReservedIPAssociation](.\Remove-AzureReservedIPAssociation.md)
Removes the association from the reserved IP address to the VM or cloud service.


### [Remove-AzureReservedIP](.\Remove-AzureReservedIP.md)
Removes a reserved IP address by its name.


### [Remove-AzureServiceADDomainExtension](.\Remove-AzureServiceADDomainExtension.md)
Removes the cloud service AD domain extension applied on all roles or named roles at a certain deployment slot.


### [Remove-AzureServiceAntimalwareExtension](..\..\..\Azure.Antimalware\v1.0\CmdletMDs\Remove-AzureServiceAntimalwareExtension.md)
Removes the antimalware configuration from a cloud service.


### [Remove-AzureServiceDiagnosticsExtension](.\Remove-AzureServiceDiagnosticsExtension.md)
Removes the cloud service diagnostics extension applied on all roles or named roles at a certain deployment slot.


### [Remove-AzureServiceExtension](.\Remove-AzureServiceExtension.md)
Removes cloud service extensions that are applied on a deployment.


### [Remove-AzureServiceRemoteDesktopExtension](.\Remove-AzureServiceRemoteDesktopExtension.md)
Removes the cloud service remote desktop extension applied on all roles or named roles at a specified deployment slot.


### [Remove-AzureStaticVNetIP](.\Remove-AzureStaticVNetIP.md)
Removes the static virtual network IP address information from a virtual machine object, if any.


### [Remove-AzureStorageAccount](.\Remove-AzureStorageAccount.md)
Deletes the specified storage account from a subscription.


### [Remove-AzureVirtualIP](.\Remove-AzureVirtualIP.md)
Deletes a virtual IP address from your Cloud Service.


### [Remove-AzureVMAccessExtension](.\Remove-AzureVMAccessExtension.md)
Removes the VMAccess extension applied on a virtual machine.


### [Remove-AzureVMBGInfoExtension](.\Remove-AzureVMBGInfoExtension.md)
Removes the BGInfo extension applied on a virtual machine.


### [Remove-AzureVMChefExtension](.\Remove-AzureVMChefExtension.md)
Removes the Chef extension applied on the virtual machine.


### [Remove-AzureVMCustomScriptExtension](.\Remove-AzureVMCustomScriptExtension.md)
Removes the custom script extension from a virtual machine.


### [Remove-AzureVMDiagnosticsExtension](.\Remove-AzureVMDiagnosticsExtension.md)
Removes the Azure Diagnostics extension from a virtual machine.


### [Remove-AzureVMDscExtension](.\Remove-AzureVMDscExtension.md)
Removes an azure_2 DSC extension from a virtual machine.


### [Remove-AzureVMExtension](.\Remove-AzureVMExtension.md)
Removes resource extensions from a virtual machine.


### [Remove-AzureVMImageDataDiskConfig](.\Remove-AzureVMImageDataDiskConfig.md)
Removes the data disk configuration from the DiskConfigSet object.


### [Remove-AzureVMImageOSDiskConfig](.\Remove-AzureVMImageOSDiskConfig.md)
Removes the operating system disk configuration from the DiskConfigSet object.


### [Remove-AzureVMImage](.\Remove-AzureVMImage.md)
Removes an operating system image from the image repository.


### [Remove-AzureVMMicrosoftAntimalwareExtension](..\..\..\Azure.Antimalware\v1.0\CmdletMDs\Remove-AzureVMMicrosoftAntimalwareExtension.md)
Removes the Microsoft Antimalware extension from a virtual machine.


### [Remove-AzureVMPuppetExtension](.\Remove-AzureVMPuppetExtension.md)
Removes the Puppet extension applied on a virtual machine.


### [Remove-AzureVMSqlServerExtension](.\Remove-AzureVMSqlServerExtension.md)
Removes an azure_2 virtual machine SQL Server extension from a virtual machine object.


### [Remove-AzureVM](.\Remove-AzureVM.md)
Removes an azure_2 virtual machine.


### [Remove-AzureVNetConfig](.\Remove-AzureVNetConfig.md)
Deletes the network configuration from the current azure_2 subscription.


### [Reset-AzureRoleInstance](.\Reset-AzureRoleInstance.md)
Requests a reboot or reimage of a single role instance or all role instances of a specific role.


### [Restart-AzureVM](.\Restart-AzureVM.md)
Restarts an azure_2 virtual machine.


### [Save-AzureVhd](.\Save-AzureVhd.md)
Enables download of .vhd images.


### [Save-AzureVMImage](.\Save-AzureVMImage.md)
Captures and saves the image of a stopped azure_2 virtual machine.


### [Set-AzureAclConfig](.\Set-AzureAclConfig.md)
Modifies an ACL configuration object.


### [Set-AzureAffinityGroup](.\Set-AzureAffinityGroup.md)
Modifies properties of an affinity group.


### [Set-AzureAvailabilitySet](.\Set-AzureAvailabilitySet.md)
Sets the name of the availability set on an azure_2 virtual machine.


### [Set-AzureDataDisk](.\Set-AzureDataDisk.md)
Modifies the host caching of an existing data disk on an azure_2 virtual machine.


### [Set-AzureDeployment](.\Set-AzureDeployment.md)
Modifies the status, configuration settings, or upgrade mode of a deployment.


### [Set-AzureDns](.\Set-AzureDns.md)
Modifies the IP address of a DNS server.


### [Set-AzureEndpoint](.\Set-AzureEndpoint.md)
Modifies an endpoint assigned to a virtual machine.


### [Set-AzureInternalLoadBalancer](.\Set-AzureInternalLoadBalancer.md)
Modifies an internal load balancer configuration in an azure_2 service.


### [Set-AzureLoadBalancedEndpoint](.\Set-AzureLoadBalancedEndpoint.md)
Modifies all of the endpoints in a load balancer set within an azure_2 service.


### [Set-AzureNetworkInterfaceConfig](.\Set-AzureNetworkInterfaceConfig.md)



### [Set-AzureNetworkSecurityGroupConfig](.\Set-AzureNetworkSecurityGroupConfig.md)



### [Set-AzureOSDisk](.\Set-AzureOSDisk.md)
Modifies the host cache mode of an azure_2 virtual machine.


### [Set-AzurePublicIP](.\Set-AzurePublicIP.md)
Adds a Public IP to an azure_2 virtual machine.


### [Set-AzureReservedIPAssociation](.\Set-AzureReservedIPAssociation.md)
Associates a reserved IP address with an existing virtual machine or cloud service.


### [Set-AzureRole](.\Set-AzureRole.md)
Sets the number of instances of an azure_2 role to run.


### [Set-AzureServiceADDomainExtension](.\Set-AzureServiceADDomainExtension.md)
Enables an AD Domain extension for a cloud service.


### [Set-AzureServiceAntimalwareExtension](..\..\..\Azure.Antimalware\v1.0\CmdletMDs\Set-AzureServiceAntimalwareExtension.md)
Configures the Microsoft Antimalware extension for cloud services.


### [Set-AzureServiceDiagnosticsExtension](.\Set-AzureServiceDiagnosticsExtension.md)
Enables azure_2 Diagnostics extension on specified roles or all roles on a deployed service or at deployment.


### [Set-AzureServiceExtension](.\Set-AzureServiceExtension.md)
Adds a cloud service extension to a deployment.


### [Set-AzureServiceRemoteDesktopExtension](.\Set-AzureServiceRemoteDesktopExtension.md)
Enables remote desktop extension on specified role(s) or all roles on a deployed service or at deployment.


### [Set-AzureService](.\Set-AzureService.md)
Sets or updates the label and description of the specified Microsoft azure_2 service.


### [Set-AzureStaticVNetIP](.\Set-AzureStaticVNetIP.md)
Sets the static VNet IP address information for a virtual machine object.


### [Set-AzureStorageAccount](.\Set-AzureStorageAccount.md)
Updates the properties of a storage account in an azure_2 subscription.


### [Set-AzureSubnet](.\Set-AzureSubnet.md)
Defines the subnet list for an azure_2 virtual machine.


### [Set-AzureVMAccessExtension](.\Set-AzureVMAccessExtension.md)
Sets the VMAccess extension for a virtual machine.


### [Set-AzureVMBGInfoExtension](.\Set-AzureVMBGInfoExtension.md)
Sets the BGInfo extension for a virtual machine.


### [Set-AzureVMChefExtension](.\Set-AzureVMChefExtension.md)
Adds the Chef extension to the virtual machine.


### [Set-AzureVMCustomScriptExtension](.\Set-AzureVMCustomScriptExtension.md)
Sets information for an azure_2 virtual machine custom script extension.


### [Set-AzureVMDiagnosticsExtension](.\Set-AzureVMDiagnosticsExtension.md)
Configures the Azure Diagnostics extension on a virtual machine.


### [Set-AzureVMDscExtension](.\Set-AzureVMDscExtension.md)
Configures the DSC extension on a virtual machine.


### [Set-AzureVMExtension](.\Set-AzureVMExtension.md)
Sets resource extensions for virtual machines.


### [Set-AzureVMImageDataDiskConfig](.\Set-AzureVMImageDataDiskConfig.md)
Sets the Data Disk properties on the virtual machine image.


### [Set-AzureVMImageOSDiskConfig](.\Set-AzureVMImageOSDiskConfig.md)
Sets the operating system disk properties on a virtual machine image.


### [Set-AzureVMMicrosoftAntimalwareExtension](..\..\..\Azure.Antimalware\v1.0\CmdletMDs\Set-AzureVMMicrosoftAntimalwareExtension.md)
Configures the Microsoft Antimalware extension for a virtual machine.


### [Set-AzureVMPuppetExtension](.\Set-AzureVMPuppetExtension.md)
Sets the Puppet extension for a virtual machine.


### [Set-AzureVMSize](.\Set-AzureVMSize.md)
Sets the size of an azure_2 virtual machine.


### [Set-AzureVMSqlServerExtension](.\Set-AzureVMSqlServerExtension.md)
Sets the azure_2 SQL Server extension on a virtual machine.


### [Set-AzureVNetConfig](.\Set-AzureVNetConfig.md)
Updates the virtual network settings for an azure_2 cloud service.


### [Set-AzureWalkUpgradeDomain](.\Set-AzureWalkUpgradeDomain.md)
Walks the specified upgrade domain.


### [Start-AzureVM](.\Start-AzureVM.md)
Starts an azure_2 virtual machine.


### [Stop-AzureVM](.\Stop-AzureVM.md)
Shuts down an azure_2 virtual machine.


### [Test-AzureStaticVNetIP](.\Test-AzureStaticVNetIP.md)
Tests the availability of a static virtual network IP address, and gets a list of suggestions if the queried address is not available.


### [Update-AzureDisk](.\Update-AzureDisk.md)
Changes the label of a disk in the azure_2 disk repository.


### [Update-AzureVMImage](.\Update-AzureVMImage.md)
Updates the label of an operating system image in the image repository.


### [Update-AzureVM](.\Update-AzureVM.md)
Modifies the configuration of an azure_2 virtual machine.




